@@ -17,6 +17,7 @@ group "Elm_Config" struct {
   value "zoom_friction" double: 0.5;
   value "thumbscroll_border_friction" double: 0.5;
   value "thumbscroll_sensitivity_friction" double: 0.25;
+  value "scroll_smooth_start_enable" uchar: 1;
   value "scroll_smooth_time_interval" double: 0;
   value "scroll_smooth_amount" double: 1.0;
   value "scroll_smooth_history_weight" double: 0.1;
